--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,62 +1,47 @@
-<div class="container">
-    <div class="row">
-      <div class="col text-right">
-        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
-           My Wish List&nbsp;<img src="./assets/images/corazonBlanco.png"/>
-        </button>
-      </div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col text-center">
+      <h1>Item Manager - Wallapop</h1>
     </div>
-    <h1>List of Products</h1>
-    <div class="row">
-      <div class="col">
-        <div class="form-group">
-          <input type="text" class="form-control" name="filterItems" placeholder="Search products..." [(ngModel)]="filterItems">
-        </div>
-      </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <img src="./assets/images/wallapop-logo.jpg" width="100px"/>
+    </div>  
+    <div class="col text-right">
+            
+      <button type="button" class="btnWishList" data-toggle="modal" data-target="#exampleModal">
+        <img id="imgBtnCorazon" src="./assets/images/corazonBlanco.png"/>&nbsp;&nbsp;My Wish List
+      </button>
     </div>
-    <div class="row">
-      <div class="col">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Description</th>
-              <th>Price</th>
-              <th>Email</th>
-              <th>Wish List</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of items | paginate:page_size:page_number | filter:filterItems; index as i ">
-              <td>{{item.title}}</td>
-              <td>{{item.description}}</td>
-              <td>{{item.price}}</td>
-              <td>{{item.email}}</td>
-              <td (click)="wishList(i)" class="wishlist">
-                <img class="imgWhitelist" [src]="item.whitelist? './assets/images/sinFavorito.png' : './assets/images/favorito.png'" />
-                
-
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <mat-paginator [length]="20"
-               [pageSize]="5"
-               [pageSizeOptions]="pageSizeOptions"
-               (page)="handlePage($event)">
-        </mat-paginator>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col"></div>
-        <div class="msj" id="divMsj" role="alert">
-            <p id="msjWishList">Añadido a Wish List</p>
-        </div>
-        <div class="col"></div>
-    </div>
-    
-
-  
+  </div>
+  <hr>
+  <br/><br/>
+  <div class="row">    
+    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
+      <thead>
+        <tr>
+          <th class="align-middle text-center">Image</th>
+          <th class="align-middle text-center">Title</th>
+          <th class="align-middle text-center">Description</th>
+          <th class="align-middle text-center">Price</th>
+          <th class="align-middle text-center">Email</th>
+          <th class="align-middle text-center">Wish List</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of items; index as i">
+          <td class="align-middle text-center"><img class="wishImg" src="{{item.image}}"/></td>
+          <td class="align-middle text-center">{{item.title}}</td>
+          <td class="align-middle">{{item.description}}</td>
+          <td class="align-middle text-center">{{item.price}}</td>
+          <td class="align-middle text-center">{{item.email}}</td>
+          <td (click)="wishList(i)" class="wishlist align-middle text-center">            
+            <img id="imgWishList{{i}}" class="imgWhitelist" [src]="item.whitelist? './assets/images/sinFavorito.png' : './assets/images/favorito.png'" />
+          </td>
+        </tr>
+      </tbody>
+      </table>  
   </div>
 
 
@@ -78,24 +63,24 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>Image</th>
-              <th>Title</th>
-              <th>Wish List</th>
+              <th class="align-middle text-center">Image</th>
+              <th class="align-middle text-center">Title</th>
+              <th class="align-middle text-center">Wish List</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of favourites | wishlist:wishItems">
-              <td><img class="wishImg" src="{{item.image}}"/></td>
+            <tr *ngFor="let item of favourites | wishlist:wishItems; index as i">
+              <td class="align-middle text-center"><img class="wishImg" src="{{item.image}}"/></td>
               <td class="align-middle text-center">{{item.title}}</td>              
-              <td (click)="remove(item.title)" class="wishlist">                
-                  <img src="./assets/images/favorito.png" class="imgWhitelist"/>
+              <td (click)="remove(item.title)" class="wishlist align-middle text-center">                
+                  <img src="./assets/images/favorito.png" id="imgRemove{{i}}" class="imgWhitelist"/>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btnWishList" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
