--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,13 +1,11 @@
 <div class="container mt-5">
   <div class="row">
+    <div class="col">
+      <img src="./assets/images/logo.jpg" width="100px"/>
+    </div>  
     <div class="col text-center">
       <h1>Item Manager - Wallapop</h1>
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <img src="./assets/images/wallapop-logo.jpg" width="100px"/>
-    </div>  
     <div class="col text-right">
             
       <button type="button" class="btnWishList" data-toggle="modal" data-target="#exampleModal">
@@ -23,9 +21,9 @@
         <tr>
           <th class="align-middle text-center">Image</th>
           <th class="align-middle text-center">Title</th>
-          <th class="align-middle text-center">Description</th>
+          <th class="align-middle text-center hideMovil">Description</th>
           <th class="align-middle text-center">Price</th>
-          <th class="align-middle text-center">Email</th>
+          <th class="align-middle text-center hideMovil">Email</th>
           <th class="align-middle text-center">Wish List</th>
         </tr>
       </thead>
@@ -33,18 +31,18 @@
         <tr *ngFor="let item of items; index as i">
           <td class="align-middle text-center"><img class="wishImg" src="{{item.image}}"/></td>
           <td class="align-middle text-center">{{item.title}}</td>
-          <td class="align-middle">{{item.description}}</td>
+          <td class="align-middle hideMovil">{{item.description}}</td>
           <td class="align-middle text-center">{{item.price}}</td>
-          <td class="align-middle text-center">{{item.email}}</td>
+          <td class="align-middle text-center hideMovil">{{item.email}}</td>
           <td (click)="wishList(i)" class="wishlist align-middle text-center">            
-            <img id="imgWishList{{i}}" class="imgWhitelist" [src]="item.whitelist? './assets/images/sinFavorito.png' : './assets/images/favorito.png'" />
+            <img id="imgWishList{{i}}" class="imgWhitelist" src="./assets/images/sinFavorito.png">
+            <!--<img id="imgWishList{{i}}" class="imgWhitelist" [src]="item.whitelist? './assets/images/sinFavorito.png' : './assets/images/favorito.png'" />-->
           </td>
         </tr>
       </tbody>
       </table>  
   </div>
-
-
+   
 
   <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
